Refresh plugin for September 2024 (#341)