@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.46</version>
+    <version>4.88</version>
     <relativePath />
   </parent>
   <groupId>com.datapipe.jenkins.plugins</groupId>
@@ -13,7 +13,7 @@
   <packaging>hpi</packaging>
   <properties>
     <changelist>9999-SNAPSHOT</changelist>
-    <jenkins.version>2.303.3</jenkins.version>
+    <jenkins.version>2.452.4</jenkins.version>
     <hpi.compatibleSinceVersion>2.0.0</hpi.compatibleSinceVersion>
     <gitHubRepo>jenkinsci/${project.artifactId}</gitHubRepo>
   </properties>
@@ -76,12 +76,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>3.5.0</version>
           <dependencies>
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>8.31</version>
+              <version>10.18.1</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -117,9 +117,9 @@
       <artifactId>structs</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.bettercloud</groupId>
+      <groupId>io.github.jopenlibs</groupId>
       <artifactId>vault-java-driver</artifactId>
-      <version>5.1.0</version>
+      <version>6.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -145,7 +145,6 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.aws-java-sdk</groupId>
       <artifactId>aws-java-sdk-minimal</artifactId>
-      <version>1.12.246-349.v96b_b_f7eb_a_c3c</version>
       <optional>true</optional>
     </dependency>
     <!-- Test Dependencies -->
@@ -157,7 +156,7 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>vault</artifactId>
-      <version>1.15.2</version>
+      <version>1.20.1</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -173,11 +172,6 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-inline</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -220,11 +214,35 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.303.x</artifactId>
-        <version>1500.ve4d05cd32975</version>
+        <artifactId>bom-2.452.x</artifactId>
+        <version>3387.v0f2773fa_3200</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <profiles>
+    <profile>
+      <id>jdk17</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties />
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>-Xms768M -Xmx768M -XX:+HeapDumpOnOutOfMemoryError -XX:+TieredCompilation -XX:TieredStopAtLevel=1 @{jenkins.addOpens} @{jenkins.insaneHook}
+                  --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                  --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED</argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
 </project>
